--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" class="dark"> <!-- Activar el tema oscuro -->
+<html lang="es" class="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -10,9 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
-<body class="bg-gray-900 text-white flex justify-center items-center h-screen"> <!-- Centrar y aplicar tema oscuro -->
+<body class="bg-gray-900 text-white flex justify-center items-center h-screen">
     <div class="container mx-auto p-4">
-        <div class="max-w-lg mx-auto bg-gray-800 p-6 rounded-lg shadow-lg"> <!-- Fondo oscuro -->
+        <div class="max-w-lg mx-auto bg-gray-800 p-6 rounded-lg shadow-lg">
             <h1 class="text-2xl font-bold mb-4 text-center">To-Do List</h1>
             <form id="taskForm" class="flex mb-4">
                 <input id="taskInput" type="text"
